kubernetes/apps/media/jellyfin/app/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin-service # Must be equal to Service name for automatic mapping
  namespace: media
subsets:
- addresses:
  - ip: 192.168.1.211 # IP address of your external service that you would like to proxy requests to
  ports:
  - port: 8096
