kubernetes/apps/media/jellyfin/app/service.yaml
apiVersion: extensions/v1beta1
kind: Service
metadata:
  name: jellyfin-service
  namespace: media
spec:
  ports:
    - port: 8096
      protocol: TCP
      targetPort: 8096
      name: http
