kubernetes/apps/media/jellyfin/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: jellyfin-service-ingress
  namespace: media
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - "jellyfin.${SECRET_DOMAIN}"
    secretName: tls-dev-com
  rules:
  - host: "jellyfin.${SECRET_DOMAIN}"
    http:
      paths:
      - backend:
          service:
            name: jellyfin-service # Here you specify the name of the Service traffic must be routed to
            port:
              number: 8096
        path: /
        pathType: Prefix
